# imageAgent

./: .env.example  .gitignore  CLAUDE.md  GenClaw_Code-Driven_Agentic_Image_Generation_中文翻译.md  README.md  SEARCH_INTEGRATION.md  pyproject.toml  test_chat_api.py
.claude/: settings.json
.claude/agents/: advisor.md
.tmp_tele/: img_b64.txt  mask_b64.txt  result_b64.txt  runner.py  runner_i2i.py  runner_strong.py
docs/: TODO.md  reproduction-notes.md  reproduction-roadmap.md
docs/adr/: 0001-genclaw-reproduction-architecture.md  0002-use-langgraph-for-agent-orchestration.md  0003-template-vs-freeform-code-generation.md  0004-provider-and-benchmark-selection.md  0005-code-as-brush-svg-first.md
docs/plans/: 2026-06-18-genclaw-reproduction-plan.md
docs/specs/: 2026-06-18-genclaw-reproduction-spec.md
genclaw/: __init__.py  artifacts.py  cli.py  config.py  pipeline.py  schemas.py  search.py  tracing.py
genclaw/agent/: __init__.py  base.py  external.py  fixture.py  prompts.py
genclaw/benchmarks/: __init__.py  fixtures.py  runner.py
genclaw/generators/: __init__.py  base.py  external.py  mock.py  tele.py
genclaw/graph/: __init__.py  builder.py  nodes.py  routes.py  state.py
genclaw/renderers/: __init__.py  base.py  code.py  html.py  passthrough.py  physics.py  playwright_render.py  svg.py  svg_validate.py  three.py
genclaw/review/: __init__.py  base.py  composite.py  rules.py  vlm.py
plantuml_stages/: genclaw_architecture.puml  genclaw_architecture_concise.puml  genclaw_architecture_linear.puml  genclaw_architecture_minimal.puml
tests/: conftest.py  test_artifacts.py  test_benchmark.py  test_cli.py  test_code_renderer.py  test_composite_reviewer.py  test_external_providers.py  test_fixture_agent.py  test_graph_nodes.py  test_graph_state.py  test_html_renderer.py  test_langgraph_workflow.py  test_mock_generator.py  test_physics_renderer.py  test_pipeline_fixture.py  test_playwright_render.py  test_prompts.py  test_review_rules.py  test_schemas.py  test_search.py  test_svg_renderer.py  test_three_renderer.py
