[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genclaw"
version = "0.1.0"
description = "Independent reproduction of GenClaw: Code-Driven Agentic Image Generation (arXiv 2605.30248)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "genclaw reproduction" }]

# Core runtime dependencies.
#
# Version pins (plan task 1): langgraph + transitive langchain-core are pinned
# because of API churn. Verified installed and exercised end-to-end on
# 2026-06-18: langgraph 1.2.5 / langchain-core 1.4.7 (installed via the
# Tsinghua PyPI mirror; see README "Known limitations" for the mirror setup).
dependencies = [
    "pydantic>=2.7,<3",
    "typer>=0.12",
    "rich>=13",
    "numpy>=1.26",
    "pillow>=10.3",
    # Orchestration. Pinned to the verified major; langgraph 1.x is a different
    # API generation from the original 0.2 target and is what this code runs on.
    "langgraph>=1.2,<2",
    "langchain-core>=1.4,<2",
]

[project.optional-dependencies]
# Browser rendering (SVG/HTML/Three.js -> PNG) and the Python physics backend
# (matplotlib -> PNG, no browser). Optional so the deterministic core (schema,
# source compilation, review rules) installs and tests without them.
render = ["playwright>=1.44", "matplotlib>=3.7"]

dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "playwright>=1.44",
    "matplotlib>=3.7",
]

# External provider adapters (phase 2). Default stack aligns with the paper
# (ADR 0004): Claude-Opus backbone/reviewer, Gemini-Flash-Image generator,
# SAM3 segmentation. These are deliberately left as extras so core has no
# hard dependency on any vendor SDK. The adapters import their SDK lazily and
# raise ProviderNotConfiguredError when unset, so the package works without any
# of these installed.
providers = [
    "anthropic>=0.40",      # Claude-Opus agent + VLM reviewer (default backbone)
    "google-genai>=0.3",    # Gemini-Flash-Image generator (default)
    "tavily-python>=0.5",   # multi-round search for knowledge grounding (Mind-Bench)
]

[project.scripts]
genclaw = "genclaw.cli:app"

[tool.setuptools.packages.find]
include = ["genclaw*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "render: tests that require Playwright + a Chromium install (PNG rasterization)",
    "langgraph: tests that require the langgraph package to be installed",
]
